# rockwotj.com

./: .gitignore  README.md  firebase.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
arcade/: index.html
blogs/untrusted-llm-inputs/: eval_structured.parquet  eval_unstructured.parquet  evaluate_models.py  generate_injection_dataset.py  injection_examples_structured.parquet  injection_examples_unstructured.parquet  pyproject.toml  split_dataset.py  train_gemma3.py
src/: base.css  custom.css  index.css
src/arcade/: App.tsx
src/arcade/match/: Card.tsx  GameOver.tsx  index.tsx  logic.ts
src/components/: CopyMarkdown.astro  Footer.astro  Header.astro
src/hooks/: useConfetti.ts  useTimeout.ts
src/layouts/: BlogPost.astro  Layout.astro
src/pages/: devotional.astro  index.astro  resume.astro
src/pages/blog/: c-memory-management-rules.md  index.astro  musings-on-kubecon-wasmday-2023.md  protecting-against-stack-overflow-in-wasmtime-host-functions.md  reactions-to-ducklake.md  toy-db-1.md  untrusted-llm-inputs.md
