[project]
name = "untrusted-llm-inputs"
version = "0.1.0"
description = "Experiments for training LLMs to resist prompt injection attacks"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "google-genai>=0.2.0",
    "unsloth[colab-new] @ git+https://github.com/unslothai/unsloth.git",
    "torch>=2.0.0",
    "trl>=0.7.0",
    "datasets>=2.14.0",
    "transformers>=4.36.0",
]
